<resources>
    <string name="app_name">theFirstLineCode</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="start_normal_activity">Start NormalActivity </string>
    <string name="start_dialog_activity">Start DialogActivity </string>
    <string name="this_activity">This Activity</string>
    <string name="back">Back</string>
    <string name="title">Title Text</string>
    <string name="edit">编辑</string>
    <string name="input">请输入</string>
    <string name="send">发送</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_broadcast">发送广播</string>
    <string name="send_request">Send Request</string>
    <string name="retrofit">Retrofit Test</string>
    <string name="save_data">Save Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="account">Account:</string>
    <string name="remember_pass">记住密码</string>
    <string name="call10086">打电话给中国移动</string>
    <string name="take_photo">拍照</string>
    <string name="title_activity_m_d">MDActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>